--- a/pom.xml
+++ b/pom.xml
@@ -17,18 +17,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<swagger.version>2.5.0</swagger.version>
+		<spring.boot.version>2.1.1.RELEASE</spring.boot.version>
 	</properties>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
 
 	<modules>
 		<module>cim-server</module>
 		<module>cim-client</module>
+		<module>cim-client-test</module>
+		<module>cim-server-test</module>
+
 		<module>cim-common</module>
 		<module>cim-forward-route</module>
 	</modules>
@@ -36,6 +33,14 @@
 
 	<dependencyManagement>
 		<dependencies>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>${spring.boot.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 
 			<dependency>
 				<groupId>com.squareup.okhttp3</groupId>
@@ -51,7 +56,7 @@
 			<dependency>
 				<groupId>com.crossoverjie.netty</groupId>
 				<artifactId>cim-common</artifactId>
-				<version>1.0.1-SNAPSHOT</version>
+				<version>1.0.0-SNAPSHOT</version>
 			</dependency>
 
 			<dependency>
@@ -103,12 +108,31 @@
 				<artifactId>spring-boot-admin-starter-client</artifactId>
 				<version>1.5.7</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.12</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -118,5 +142,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
+
 	</build>
 </project>
